--- a/key-test/src/App.css
+++ b/key-test/src/App.css
@@ -26,3 +26,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.but{
+  display: block;
+  background-color: green;
+  text-align: center;
+  margin-top: 10px;
+  height: 50px;
+  color: white;
+  text-decoration: none;
+  line-height: 50px;
+}
+
